--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,7 @@ a:active {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 100%;
 }
 
 .input-group {
